--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,79 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+def read_phonebook(filename="phonebook.txt"):
+    """Читает телефонный справочник из файла."""
+    with open(filename, "a+"):
+        pass
 
-# C extensions
-*.so
+    with open(filename, "r") as file:
+        lines = file.readlines()
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+    phonebook = {}
+    for line in lines:
+        surname, name, phone = line.strip().split(";")
+        phonebook[surname] = (name, phone)
+    return phonebook
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+def write_phonebook(phonebook, filename="phonebook.txt"):
+    """Записывает телефонный справочник в файл."""
+    with open(filename, "w") as file:
+        for surname, (name, phone) in phonebook.items():
+            file.write(f"{surname};{name};{phone}\n")
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
 
-# Translations
-*.mo
-*.pot
+def add_entry(surname, name, phone):
+    phonebook = read_phonebook()
+    phonebook[surname] = (name, phone)
+    write_phonebook(phonebook)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+def update_entry(surname, name=None, phone=None):
+    phonebook = read_phonebook()
+    if surname in phonebook:
+        current_name, current_phone = phonebook[surname]
+        phonebook[surname] = (name if name else current_name, phone if phone else current_phone)
+        write_phonebook(phonebook)
 
-# Scrapy stuff:
-.scrapy
 
-# Sphinx documentation
-docs/_build/
+def delete_entry(surname):
+    phonebook = read_phonebook()
+    if surname in phonebook:
+        del phonebook[surname]
+        write_phonebook(phonebook)
 
-# PyBuilder
-.pybuilder/
-target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+def find_entry(surname):
+    phonebook = read_phonebook()
+    return phonebook.get(surname, None)
 
-# IPython
-profile_default/
-ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+def main():
+    while True:
+        choice = input("Выберите действие (add/update/delete/find/quit): ").lower()
+        if choice == "quit":
+            break
+        elif choice == "add":
+            surname = input("Введите фамилию: ")
+            name = input("Введите имя: ")
+            phone = input("Введите номер телефона: ")
+            add_entry(surname, name, phone)
+        elif choice == "update":
+            surname = input("Введите фамилию: ")
+            name = input("Введите новое имя (оставьте пустым, чтобы не менять): ")
+            phone = input("Введите новый номер телефона (оставьте пустым, чтобы не менять): ")
+            update_entry(surname, name, phone)
+        elif choice == "delete":
+            surname = input("Введите фамилию для удаления: ")
+            delete_entry(surname)
+        elif choice == "find":
+            surname = input("Введите фамилию для поиска: ")
+            entry = find_entry(surname)
+            if entry:
+                print(f"Имя: {entry[0]}, Номер телефона: {entry[1]}")
+            else:
+                print("Запись не найдена.")
+        else:
+            print("Неизвестное действие.")
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+if __name__ == "__main__":
+    main()
